--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mongodb": "^3.6.5",
+    "mongoose": "^5.12.2",
     "mysql2": "^2.2.5",
     "pug": "^2.0.3",
     "sequelize": "^6.5.1"
